package loanbook.interest;

public enum InterestType {
    SIMPLE, COMPOUND
}
